--- a/Wanted/css파일/develop_navbar.css
+++ b/Wanted/css파일/develop_navbar.css
@@ -1,13 +1,16 @@
 .categoryNavbarContainer {
   background: #fff;
-  padding-top: 40px;
+  padding-top: 2.5rem;
+  margin: 0 auto;
 }
 .categoryNavbarBody {
   display: flex;
-  max-width: 1060px;
+  max-width: 66.25rem;
   align-items: center;
+  padding-bottom: 1.25rem;
+  margin: 0 auto;
 }
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
   .categoryNavbarBody {
     margin: 0 auto;
     width: 87.72%;
@@ -19,49 +22,213 @@
   white-space: nowrap;
 }
 .categoryNavbarBodyFieldText {
-  padding-top: 3px;
-  margin-right: 15.5px;
-  font-size: 24px;
-  line-height: 29px;
+  padding-top: 0.188rem;
+  margin-right: 0.969;
+  font-size: 1.5rem;
+  line-height: 1.813rem;
   font-weight: 700;
   color: #333;
 }
 .moreButton {
-  border: 1px solid #e1e2e3;
+  border: 0.063rem solid #e1e2e3;
   border-radius: 9999px;
   background-color: #fff;
-  width: 26px;
-  height: 26px;
+  width: 1.625rem;
+  height: 1.625rem;
   flex-shrink: 0;
 }
 .moreButton svg {
-  margin-top: 7px;
+  margin-top: 0.438rem;
 }
 
-.categoryNavbarBodyFieldGroup {
-  display: flex;
-  white-space: nowrap;
-  overflow: hidden;
-}
 .categoryNavbarBodyFieldLine {
   content: '|';
-  font-size: 28px;
-  line-height: 29px;
-  padding: 3px 24px 0;
+  font-size: 1.75rem;
+  line-height: 1.813rem;
+  padding: 0.188rem 1.5rem 0;
   color: #ececec;
 }
-.categoryNavbarBodyFieldGroup {
+.categoryNavbarBodyFieldBox {
   display: flex;
   align-items: center;
   overflow: hidden;
 }
-.categoryNavbarBodyFieldroupText {
-  padding-top: 3px;
-  margin-right: 15.5px;
-  font-size: 24px;
-  line-height: 29px;
+.categoryNavbarBodyFieldText1 {
+  padding-top: 0.188rem;
+  margin-right: 0.969rem;
+  font-size: 1.5rem;
+  line-height: 1.813rem;
+  font-weight: 700;
+  color: #333;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.categoryNavbarBodyFieldText2 {
+  padding-top: 0.188rem;
+  margin-right: 0.969rem;
+  font-size: 1.5rem;
+  line-height: 1.813rem;
   font-weight: 400;
   color: #333;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+.filterListWrapper {
+  margin-bottom: 1.563rem;
+  padding-top: 0.625rem;
+}
+@media (max-width: 1200px) {
+  .filterListWrapper {
+    margin: 0 auto;
+    width: 87.72%;
+  }
+}
+.filterListButtonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 1.563rem;
+  border-bottom: 0.063rem solid rgba(236, 236, 236, 0.7);
+}
+.filterListButtonBox {
+  display: flex;
+  align-items: center;
+  flex: auto;
+  justify-content: left;
+  max-width: none;
+}
+.filterButtonSet {
+  align-items: center;
+  display: inline-flex;
+  height: 2.5rem;
+  padding: 0 0.938rem;
+  margin-bottom: 0;
+  border-radius: 0.313rem;
+  border: 0.063rem solid #ececec;
+  background-color: #fff;
+  color: #333;
+  font-size: 0.813rem;
+  font-weight: 400;
+  position: relative;
+}
+.filterButtonFirst {
+  margin-right: 0.938rem;
+}
+.filterdCount {
+  position: absolute;
+  top: -0.396rem;
+  right: -0.555rem;
+  background-color: #36f;
+  border-radius: 0.625rem;
+  color: #fff;
+  display: inline-block;
+  font-size: 0.75rem;
+  font-weight: 600;
+  width: 1.25rem;
+  height: 1.25rem;
+  line-height: 1.25rem;
+  margin-left: 0.438rem;
+  z-index: 1;
+}
+.filterButtonSecond {
+  color: #36f !important;
+  font-weight: 600;
+  margin-right: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-size: 0.875rem;
+  letter-spacing: normal;
+}
+.filterListInnerSpace {
+  margin-left: 0.625rem;
+}
+.filterButtonSet > svg {
+  margin-left: 0.5rem;
+  /* transition: 0.3s; 이 부분은 js할 때 쓰면될듯*/
+}
+.filterListCustomButton {
+  position: relative;
+  width: 6.5rem;
+  height: 2.5rem;
+}
+.filterListCustomButton button {
+  border-radius: 0.25rem;
+  border: 0.063rem solid #ececec;
+  background-color: #fff;
+  font-size: 0.875rem;
+  font-weight: 400;
+  letter-spacing: normal;
+  color: #000;
+  padding: 0 1rem;
+  position: relative;
+  width: 100%;
+  height: 2.5rem;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tagFilter {
+  padding-top: 1.563rem;
+  max-width: 66.25rem;
+  margin: 0 auto;
+}
+.tagList {
+  width: 100%;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+.tagListTrack {
+  left: 0;
+  top: 0;
+  display: block;
+}
+.tagListSlide {
+  float: left;
+  height: 100%;
+  min-height: 0.063rem;
+}
+.tagListItem {
+  height: 2rem;
+  padding: 0.5rem 0.875rem;
+  border-radius: 1.25rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0.5rem;
+  font-size: 0.813rem;
+  line-height: 1rem;
+  font-weight: 400;
+  color: #333;
+  border: 0.063rem solid transparent;
+}
+.tagListItem img {
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.313rem;
+  display: block;
+}
+.navbarFilterListArrowR {
+  width: 1.875rem;
+  height: 1.875rem;
+  border: 0.063rem solid #e1e2e3;
+  border-radius: 624.938rem;
+  background-color: #fff;
+}
+#horizontal_line {
+  height: 0.063rem;
+  margin: 0;
+  border: none;
+  background-color: #e1e2e3;
+  margin-bottom: 2.375rem;
+}
+.horizontal_line_test {
+  height: 0.063rem;
+  color: #e1e2e3;
+  margin-bottom: 2.375rem;
 }
