filterWrapper 부분 마진오류 수정

--- a/Wanted/css파일/develop_navbar.css
+++ b/Wanted/css파일/develop_navbar.css
@@ -81,6 +81,7 @@
 @media (max-width: 1200px) {
   .filterListWrapper {
     margin: 0 auto;
+    margin-bottom: 1.563rem;
     width: 87.72%;
   }
 }
