--- a/Wanted/css파일/develop_header.css
+++ b/Wanted/css파일/develop_header.css
@@ -62,6 +62,7 @@
   outline: none;
   margin-top: -2px;
   margin-right: 15px;
+  cursor: pointer;
 }
 .mainLogo {
   font-style: normal;
@@ -71,6 +72,7 @@
   margin-left: 10px;
   font-size: 20px;
   line-height: 14px;
+  cursor: pointer;
 }
 /* -- header 가운데 글씨부분 -- */
 @media (min-width: 992px) and (max-width: 1100px) {
@@ -117,6 +119,8 @@
   margin: 0;
   background: none;
   font-size: 14px;
+  font-weight: 600;
+  color: #333;
   line-height: 32px;
   height: 34px;
   padding: 0 14px;
