--- a/Wanted/css파일/develop_navbar.css
+++ b/Wanted/css파일/develop_navbar.css
@@ -74,8 +74,11 @@
   overflow: hidden;
 }
 
+.filterListFixWrapper {
+  border-bottom: 0.063rem solid #e1e2e3;
+}
 .filterListWrapper {
-  margin-bottom: 1.563rem;
+  padding-bottom: 1.563rem;
   padding-top: 0.625rem;
 }
 @media (max-width: 1200px) {
@@ -227,8 +230,288 @@
   background-color: #e1e2e3;
   margin-bottom: 2.375rem;
 }
-.horizontal_line_test {
-  height: 0.063rem;
-  color: #e1e2e3;
-  margin-bottom: 2.375rem;
+
+.jobListWrapper {
+  margin-bottom: 0.75rem;
+}
+@media (max-width: 1200px) {
+  .jobListWrapper {
+    margin: 0 auto 0.75rem;
+    width: 87.72%;
+  }
+}
+.jobListBookmarkContainer {
+  margin-bottom: 0.75rem;
+}
+.make38pxSpace {
+  height: 2.375rem;
+  border: none;
+  background-color: inherit;
+}
+
+.jobListBookmarkContainer > button {
+  display: flex;
+  align-items: center;
+  line-height: 1.5rem;
+  color: #36f;
+}
+.jobListBookmarkContainer > button > svg {
+  width: 0.688rem;
+  height: 1rem;
+  margin-right: 0.5rem;
+}
+.jobListBookmarkContainer > button > span {
+  font-size: 0.938rem;
+  font-weight: 600;
+  font-stretch: normal;
+  line-height: 1.5rem;
+  letter-spacing: normal;
+}
+.jobListBookmarkContainer > button > svg:last-of-type {
+  width: 0.625rem;
+  margin-left: 0.125rem;
+}
+
+.featuredCompanyTitle {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.3px;
+  color: #333;
+  margin: 20px 0 14px;
+}
+.featuredCompanyList {
+  margin: 0 -0.625rem 2.5rem -0.625rem;
+  display: flex;
+  flex-wrap: wrap;
+  width: inherit;
+  align-items: center;
+}
+.featuredCompanyListItem {
+  width: calc(21.6% - 1.125rem);
+}
+.featuredCompanyListItem > header {
+  z-index: 1;
+  border-radius: 3px 3px 0 0;
+  overflow: hidden;
+  margin: 0 9px;
+}
+.featuredCompanyListItem > footer {
+  margin: 0 0.563rem;
+  padding: 2.125rem 1rem 0;
+  height: 7.75rem;
+  border: 0.063rem solid #e1e2e3;
+  border-top: none;
+  border-radius: 0 0 0.188rem 0.188rem;
+  position: relative;
+}
+.featuredCompanyListItemImg {
+  height: 9.188rem;
+  border-radius: 0.188rem 0.188rem 0 0;
+  background-position: 50%;
+  background-size: cover;
+  background-color: #f2f2f2;
+}
+.featuredCompanyListItemLogo {
+  position: absolute;
+  top: -1.563rem;
+  left: 1rem;
+  width: 3.125rem;
+  height: 3.125rem;
+  background-color: #f2f2f2;
+  background-position: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 0;
+  -webkit-box-shadow: inset 0 0 0 0.063rem rgb(0 0 0 / 10%);
+  box-shadow: inset 0 0 0 0.063rem rgb(0 0 0 / 10%);
+}
+.featuredCompanyListItem > footer > h4 {
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+
+  position: relative;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: -0.019rem;
+  color: #333;
+  line-height: 1.2;
+  margin: 0.25rem 0;
+  overflow: hidden;
+  max-height: 3.625rem;
+}
+.jobListItemContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: inherit;
+  margin: 0 -0.625rem;
+}
+.jobListItem {
+  width: calc(25% - 1.25rem);
+  padding: 0.625rem;
+  list-style: none;
+  display: inline-block;
+  vertical-align: top;
+}
+.jobListItem header {
+  padding-bottom: 75%;
+  position: relative;
+  background-size: cover;
+  background-position: 50%;
+  border-radius: 0.25rem;
+  box-shadow: inset 0 0 0 0.063rem rgb(0 0 0 / 10%);
+}
+.bookmarkButton {
+  background: none;
+  padding: 0.5rem 0.375rem;
+  width: 2.625rem;
+  height: 2.625rem;
+  top: 0;
+  right: 0;
+  flex-direction: row;
+  z-index: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  border-radius: 0.188rem;
+  position: absolute;
+  color: #fff;
+}
+.jobListItemBody {
+  padding: 0.875rem 0;
+}
+.jobListItemPosition {
+  position: relative;
+  color: #333;
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.2;
+  max-height: 2.4em;
+  text-align: left;
+  word-break: break-word;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.jobListItemName {
+  font-size: 0.875rem;
+  line-height: normal;
+  text-align: left;
+  word-break: break-word;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-top: 0.625rem;
+}
+.jobListItemTipLabel {
+  position: relative;
+}
+.TipLabelVeryHigh {
+  border: 0.063rem solid #00aead;
+  color: #00aead;
+  border-radius: 0.125rem;
+  background-color: #fff;
+  display: inline-block;
+  font-size: 0.625rem;
+  font-weight: 600;
+  height: 1.188rem;
+  line-height: 1.188rem;
+  margin-top: 0.25rem;
+  padding: 0 0.313rem;
+}
+.jobListItemTipContent {
+  color: #333;
+  font-size: 0.75rem;
+  font-weight: 400;
+  height: fit-content;
+  line-height: 1em;
+  position: absolute;
+  padding: 0.688rem 0.75rem;
+  background: #fff;
+  border: 0.063rem solid #999;
+  z-index: 1;
+  display: none;
+  white-space: nowrap;
+  top: calc(100% + 0.25rem);
+  left: 50%;
+  transform: translateX(-50%);
+}
+.jobListItemTipLabel:hover .jobListItemTipContent {
+  display: block;
+}
+.jobListItemCompanyLocation {
+  font-weight: 400;
+  color: #999;
+  font-size: 14px;
+  line-height: normal;
+  text-align: left;
+  word-break: break-word;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-top: 10px;
+}
+.jobListItemDot {
+  margin: 0 3px;
+  top: -4px;
+  position: relative;
+}
+.jobListItemReward {
+  margin-top: 10px;
+  color: #333;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: left;
+  word-break: break-word;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+/* 밑의 계속 뜨는 '더 알아보기' 부분 */
+.seeMoreWrapper {
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  background-color: #258bf7;
+  transition: 0.5s;
+  box-shadow: 0 -0.125rem 0.313rem rgb(0 0 0 / 5%);
+  z-index: 2;
+  height: 4.375rem;
+}
+.seeMoreContainer {
+  margin: 0 auto;
+  width: 90%;
+  position: relative;
+  max-width: 66.25rem;
+  display: flex;
+  align-items: center;
+}
+.seeMoreText {
+  margin-right: auto;
+  text-align: left;
+  color: #fff;
+  font-size: 1.25rem;
+  font-weight: 400;
+  display: inline-block;
+  vertical-align: middle;
+}
+.seeMoreButton {
+  margin-left: auto;
+  float: right;
+  width: 7.375rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  border-radius: 0.313rem;
+  background-color: #fff;
+  color: #258bf7;
+  font-size: 0.938rem;
+  font-weight: 600;
+  text-align: center;
 }
