--- a/Wanted/css파일/style.css
+++ b/Wanted/css파일/style.css
@@ -1157,11 +1157,10 @@ select {
 .signInMalBackground {
   width: 100%;
   height: 100%;
-  /* color: rgba(0, 0, 0, 0.5); */
-  color: blue;
-  background-color: red;
+  color: rgba(0, 0, 0, 0.5);
 }
-.signInMal {
+#signin_mal {
+  /* display: none; */
   width: 25rem;
   border-radius: 5px;
   background-color: #fff;
@@ -1169,14 +1168,9 @@ select {
   top: 50%;
   left: 50%;
   overflow: hidden;
-}
-@media (min-width: 1200px) {
-  .signInMal {
-    max-width: 31.25rem;
-    max-height: calc(100vh - 9.375rem);
-    transform: translate(-50%, -50%);
-    /* z-index: 5; */
-  }
+  max-width: 31.25rem;
+  max-height: calc(100vh - 9.375rem);
+  transform: translate(-50%, -50%);
 }
 .signInMalHead {
   height: 22px;
@@ -1192,7 +1186,7 @@ select {
 .signInMalHead img {
   height: 17px;
 }
-.signInMalHead button {
+#signin_button {
   position: absolute;
   /* top: 50%; */
   right: 0;
@@ -1340,4 +1334,9 @@ input::placeholder {
 .loginModalAnchor {
   color: #3336ff;
   text-decoration: underline;
+}
+
+.signInNextMalBody {
+  padding: 20px;
+  padding-bottom: 0;
 }
