--- a/Wanted/css파일/develop_header.css
+++ b/Wanted/css파일/develop_header.css
@@ -1,6 +1,6 @@
 .headerWrapper {
   width: 100%;
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   background-color: #fff;
   z-index: 1000;
@@ -64,6 +64,9 @@
   margin-right: 15px;
   cursor: pointer;
 }
+.mainCategoryListPopUp:hover .mainCategoryList {
+  display: block;
+}
 .mainLogo {
   font-style: normal;
   font-weight: bold;
@@ -74,6 +77,38 @@
   line-height: 14px;
   cursor: pointer;
 }
+.mainCategoryList {
+  display: none;
+  position: absolute;
+  border-left: 0.063rem solid #f7f9fa;
+  border-right: 0.063rem solid #f7f9fa;
+  height: calc(100vh - 3.125rem);
+  width: 13.75rem;
+  background-color: #fff;
+  /* overflow-y: auto; */
+  z-index: 3;
+}
+.mainCategoryList li {
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  flex: 1 1;
+  padding: 0 1.25rem;
+  width: 100%;
+  cursor: pointer;
+}
+.mainCategoryList li em {
+  font-size: 0.813rem;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: normal;
+  color: #333;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 /* -- header 가운데 글씨부분 -- */
 @media (min-width: 992px) and (max-width: 1100px) {
   .navbarList {
@@ -102,6 +137,9 @@
   font-weight: 600;
   padding: 15px;
   display: inline-block;
+}
+.navbarList li:hover {
+  box-shadow: 0 -2px rgb(211, 211, 211) inset;
 }
 
 /* -- header 오른쪽부분 -- */
