--- a/Wanted/css파일/develop_navbar.css
+++ b/Wanted/css파일/develop_navbar.css
@@ -2,6 +2,7 @@
   background: #fff;
   padding-top: 2.5rem;
   margin: 0 auto;
+  margin-top: 50px;
 }
 .categoryNavbarBody {
   display: flex;
@@ -473,4 +474,3 @@
   white-space: nowrap;
   overflow: hidden;
 }
-
