--- a/Wanted/css파일/develop_header.css
+++ b/Wanted/css파일/develop_header.css
@@ -64,9 +64,19 @@
   margin-right: 15px;
   cursor: pointer;
 }
+.hambergerButton > img {
+  width: 17px;
+  height: 14px;
+}
+.mainCategoryListPopUp {
+  height: 50px;
+  position: relative;
+  cursor: pointer;
+}
 .mainCategoryListPopUp:hover .mainCategoryList {
   display: block;
 }
+
 .mainLogo {
   font-style: normal;
   font-weight: bold;
@@ -80,6 +90,8 @@
 .mainCategoryList {
   display: none;
   position: absolute;
+  top: 49px;
+  left: -15px;
   border-left: 0.063rem solid #f7f9fa;
   border-right: 0.063rem solid #f7f9fa;
   height: calc(100vh - 3.125rem);
